# elf-size-analyze

./: MANIFEST.in  README.md  elf-size-analyze.py  pyproject.toml
elf_size_analyze/: __main__.py  argument_parser.py  elf_size_analyze.py  html_output.py  misc.py  section.py  symbol.py  symbol_tree.py  tree.py
elf_size_analyze/html/: gen.py
elf_size_analyze/misc/: argument_parser.py  color.py  helpers.py  section.py  symbol.py  tree_node.py
src/elf_size_analyze/: __main__.py  argument_parser.py  color.py  misc.py  plotly.py  section.py
src/elf_size_analyze/html/: index.js  styles.css
